fix: style scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -152,7 +152,7 @@ p {
     transform: translate(-50%, -50%) !important; 
 		border: initial !important;
 		padding: initial !important;
-		overflow-y: scroll !important;
+		overflow-y: auto !important;
 		overflow-x: hidden !important;
 		max-height: 90vh;
 
